# physical-ai-book

./: .env.example  .gitignore  DOCUMENTATION_STRUCTURE_FIXES.md  prompts.txt  requirements.txt
.specify/memory/: constitution.md
backend/: .env  .env.example  .gitignore  agent.py  api.py  inspect_qdrant.py  main.py  package-lock.json  pyproject.toml  retrieve.py  test_backend.py
history/prompts/001-digital-twin/: 1-digital-twin-specification.spec.prompt.md  2-digital-twin-tasks.tasks.prompt.md
physical-ai-book/: README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  vercel.json
physical-ai-book/.docusaurus/: client-manifest.json  client-modules.js  docusaurus.config.mjs  globalData.json  i18n.json  registry.js  routes.js  routesChunkNames.json
physical-ai-book/docs/: contributing.md  intro.md
specs/001-ai-robot-analysis/: Module3_Draft_Specification.md  spec.md  tasks.md
specs/001-digital-twin/: spec.md  tasks.md
specs/001-physical-ai-book/: clarification_analysis.md  data-model.md  module1_spec.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-vla/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-embedding-vector-storage/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-retrieval-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-agent-rag-api/: plan.md  spec.md  tasks.md
specs/005-rag-frontend-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  test-results.md
(+394 files in other folders)
